--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ababool-generator",
   "description": "Ababool application generator",
-  "version": "1.0.13",
+  "version": "1.1.0",
   "author": "Ciro Artigot <ciro.artigot@gmail.com>",
   "contributors": [
     "someone <ciro.artigot@gmail.com>",
@@ -16,6 +16,7 @@
   "dependencies": {
     "commander": "2.7.1",
     "mkdirp": "0.5.1",
+    "fs-extra": "^0.26.3",
     "sorted-object": "1.0.0"
   },
   "main": "bin/ababool",
