--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ababool-generator",
   "description": "Ababool application generator",
-  "version": "1.6.0",
+  "version": "1.6.2",
   "author": "Ciro Artigot <ciro.artigot@gmail.com>",
   "contributors": [
   ],
@@ -14,8 +14,7 @@
   "dependencies": {
     "commander": "2.7.1",
     "mkdirp": "0.5.1",
-    "fs-extra": "^0.26.3",
-    "sorted-object": "1.0.0"
+    "fs-extra": "^0.26.3"
   },
   "main": "bin/ababool",
   "preferGlobal": true,
@@ -23,9 +22,6 @@
     "ababool": "./bin/ababool"
   },
   "devDependencies": {
-    "mocha": "2.2.5",
-    "rimraf": "~2.2.8",
-    "supertest": "1.0.1"
   },
   "engines": {
     "node": ">= 0.10"
